==> Moddable-OpenSource/moddable/modules/pins/spi/gecko/modSPI.c <==
#include "xsHost.h"
#include <string.h>
#include <stdlib.h>
#include <errno.h>
#include "modSPI.h"
#include "mc.defines.h"
	#include "em_device.h"
	#include "em_cmu.h"
	#include "em_emu.h"
	#include "em_gpio.h"
	#include "em_usart.h"
	#include "em_system.h"
	#define SPI_USART	USART0
	#define SPI_CLOCK	cmuClock_USART0
	#define SPI_TX_IRQ	USART0_TX_IRQn
	#define SPI_USART	USART1
	#define SPI_CLOCK	cmuClock_USART1
	#define SPI_TX_IRQ	USART1_TX_IRQn
	#define SPI_USART	USART2
	#define SPI_CLOCK	cmuClock_USART2
	#define SPI_TX_IRQ	USART2_TX_IRQn
	#define MODDEF_SPI_MOSI_LOCATION MODDEF_SPI_LOCATION
	#define MODDEF_SPI_MISO_LOCATION MODDEF_SPI_LOCATION
	#define MODDEF_SPI_SCK_LOCATION MODDEF_SPI_LOCATION
#define SPI_BUFFER_SIZE (256)

void modSPIInit(modSPIConfiguration config)
{
	if (!gSPIInited) {
		gSPIInited = 1;
	}

//	CMU->HFPERCLKEN0 |= CMU_HFPERCLKEN0_USART1; // turn on clock for USART1
	CMU_ClockEnable(SPI_CLOCK, true);

	// Enable the GPIO pins for the USART, starting with CS
	// This is to avoid clocking the flash chip when we set CLK high
// CS port will be handled by whoever instantiates it
	GPIO_PinModeSet(MODDEF_SPI_MOSI_PORT, MODDEF_SPI_MOSI_PIN, gpioModePushPull, 0);
	GPIO_PinModeSet(MODDEF_SPI_MISO_PORT, MODDEF_SPI_MISO_PIN, gpioModeInput, 0);
	GPIO_PinModeSet(MODDEF_SPI_SCK_PORT, MODDEF_SPI_SCK_PIN, gpioModePushPull, 0);

	spiInit.enable = usartEnable;
	spiInit.refFreq = 0;
	spiInit.baudrate = config->hz;
	spiInit.databits = usartDatabits8;
	spiInit.master = true;
	spiInit.msbf = true;
	spiInit.prsRxEnable = false;
	spiInit.autoTx = false;
	
	switch (config->mode) {
		case 3:
			spiInit.clockMode = usartClockMode2;   // CPOL = 1, CPHA = 1
			break;
		case 2:
			spiInit.clockMode = usartClockMode3;   // CPOL = 1, CPHA = 0
			break;
		case 1:
			spiInit.clockMode = usartClockMode1;   // CPOL = 0, CPHA = 1
			break;
		case 0:
		default:
			spiInit.clockMode = usartClockMode0;   // CPOL = 0, CPHA = 0
			break;
	}
	
#if (MIGHTY_GECKO || THUNDERBOARD2 || BLUE_GECKO) // EFR32MG1P132F256GM48 || EFR32MG12P332F1024GL125
	spiInit.autoCsEnable = false;
	spiInit.autoCsHold = false;
	spiInit.autoCsSetup = false;
#endif
	USART_InitSync(SPI_USART, &spiInit);

	config->clkdiv = SPI_USART->CLKDIV;  // store calculated speed for easy switch

#if (MIGHTY_GECKO || THUNDERBOARD2 || BLUE_GECKO)// EFR32MG1P132F256GM48 || EFR32MG12P332F1024GL125
	SPI_USART->ROUTEPEN = USART_ROUTEPEN_RXPEN | USART_ROUTEPEN_TXPEN | USART_ROUTEPEN_CLKPEN;
	SPI_USART->ROUTELOC0  = ( SPI_USART->ROUTELOC0 & ~( _USART_ROUTELOC0_TXLOC_MASK | _USART_ROUTELOC0_RXLOC_MASK | _USART_ROUTELOC0_CLKLOC_MASK ) );
	SPI_USART->ROUTELOC0 |= ( MODDEF_SPI_MOSI_LOCATION << _USART_ROUTELOC0_TXLOC_SHIFT );
	SPI_USART->ROUTELOC0 |= ( MODDEF_SPI_MISO_LOCATION << _USART_ROUTELOC0_RXLOC_SHIFT );
	SPI_USART->ROUTELOC0 |= ( MODDEF_SPI_SCK_LOCATION << _USART_ROUTELOC0_CLKLOC_SHIFT );
#elif GIANT_GECKO // EFM32GG990F1024
	// Connect the USART signals to the GPIO peripheral
	SPI_USART->ROUTE = USART_ROUTE_RXPEN | USART_ROUTE_TXPEN |
		USART_ROUTE_CLKPEN | /* USART_ROUTE_CSPEN | */
		MODDEF_SPI_LOCATION << _USART_ROUTE_LOCATION_SHIFT;
#else
	#error need SPI pins for new gecko part
#endif

	NVIC_EnableIRQ(SPI_TX_IRQ);
	(config->doChipSelect)(0, config);
}

void modSPITxRx(modSPIConfiguration config, uint8_t *data, uint16_t count)
{
	int i;

	modSPIActivateConfiguration(config);

	for (i=0; i<count; i++) {
		USART_Tx(SPI_USART, data[i]);
		data[i] = USART_Rx(SPI_USART);
	}
}
