==> iot-bus/moddable/modules/pins/spi/esp32/modSPI.c <==
#include "xsesp.h"
#include <string.h>
#include <stdlib.h>
#include <errno.h>
#include "modSPI.h"
#include "mc.defines.h"
#include "esp_attr.h"		// IRAM_ATTR
#include "esp_heap_caps.h"	// MALLOC_CAP_DMA, heap_caps_malloc
#include "esp32-hal-spi.h"
	#define MODDEF_SPI_MISO_PIN	12
	#define MODDEF_SPI_MOSI_PIN	13
	#define MODDEF_SPI_SCK_PIN	14
#define SPI_BUFFER_SIZE (512)

void modSPIInit(modSPIConfiguration config)
{
	gpio_set_direction(config->cs_pin, GPIO_MODE_OUTPUT);
    gpio_set_level(config->cs_pin, 1);

    if(_spi) {
		printf("In modSPIInit, SPI already started\n");
        return;
    }
	else{
        printf("In modSPIInit, starting SPI\n");
    }

    if(!_div) {
        _div = spiFrequencyToClockDiv(40*1000*1000);
    }

    _spi = spiStartBus(_spi_number, _div, SPI_MODE0, SPI_MSBFIRST);
    if(!_spi) {
        return;
    }

    spiAttachSCK(_spi, MODDEF_SPI_SCK_PIN);
    spiAttachMISO(_spi, MODDEF_SPI_MISO_PIN);
    spiAttachMOSI(_spi, MODDEF_SPI_MOSI_PIN);

	gSPIInited = 1;
	gSPIData = NULL;
	gSPIDataCount = -1;
	gSPITransactionBuffer = heap_caps_malloc(SPI_BUFFER_SIZE, MALLOC_CAP_DMA);
}

void modSPITxRx(modSPIConfiguration config, uint8_t *data, uint16_t count)
{
	//esp_err_t ret;
	//spi_transaction_t t;

	modSPIActivateConfiguration(config);

    gpio_set_level(config->cs_pin, 0);
	modSPISetFrequency(config->hz);
	modSPITransfer(data, count);
	gpio_set_level(config->cs_pin, 1);

	// memset(&t, 0, sizeof(t));
	// t.length = 8 * count;
	// t.tx_buffer = data;

	// t.rxlength = t.length;
	// t.rx_buffer = data;
	// ret = spi_device_transmit(config->spi_dev, &t);

	// if (0 > ret)
	// 	printf("problems sending spi message: ret: %d\n", ret);
}
